--- a/login.html
+++ b/login.html
@@ -9,8 +9,6 @@
 </head>
 
 <body>
-    pagina legal.
-    coloquei uma nova linha.
-    formulario de login.
+    <h1>pagina legal</h1>
 </body>
 </html>
